# Project

./: .env  .gitignore  Postman_Project  README.md  TREINTA UDes.pptx  backend.Dockerfile  inventory.db  pyproject.toml  requirements.txt
core_subsystem/: user.py
projectmod/: main.py  main_console.py  requirements.txt
projectmod/api/: router.py
projectmod/api/endpoints/: inventory.py  products.py  sales.py  tables.py
projectmod/database/: db.py  tables.py
projectmod/models/: product.py  product_sale.py  product_table.py  sale.py  table.py
projectmod/sale_subsystem/: GeneralInfo.py  Inventory.py  Product.py  Sale.py  SaleDetail.py  SaleFacade.py  Table.py  __init__.py
projectmod/services/: tables.py
sale_subsystem/: Sale.py  SaleFacade.py  Table.py  __init__.py
